--- a/www/custom_ui/floorplan/floorplan.css
+++ b/www/custom_ui/floorplan/floorplan.css
@@ -1,8 +1,7 @@
 /* SVG shapes */
 
 svg, svg * {
-  vector-effect: non-scaling-stroke !important;
-  pointer-events: all !important;
+  pointer-events: all;
 }
 
 /* Hover over */
@@ -13,56 +12,23 @@ svg, svg * {
   stroke-opacity: 1 !important;
 }
 
-/* Bootstrap succsss */
-
-.success-text {
-  fill: #3c763d !important;
-}
-
-.success-background, .success-text-background {
-  fill: #dff0d8 !important;
-  fill-opacity: 1 !important;
-  stroke: #d6e9c6 !important;
-  stroke-width: 1px !important;
-}
-
-/* Bootstrap info */
-
-.info-text {
-  fill: #31708f !important;
-}
-
-.info-background, .info-text-background {
-  fill: #d9edf7 !important;
-  fill-opacity: 1 !important;
-  stroke: #bce8f1 !important;
-  stroke-width: 1px !important;
-}
-
-/* Bootstrap warning */
-
-.warning-text {
-  fill: #8a6d3b !important;
-}
-
-.warning-background, .warning-text-background  {
-  fill: #fcf8e3 !important;
-  fill-opacity: 1 !important;
-  stroke: #faebcc !important;
-  stroke-width: 1px !important;
+transparent {
+  opacity: 0.2;
+  filter: alpha(opacity=20); /* For IE8 and earlier */
 }
 
 /* Bootstrap danger */
 
 .danger-text {
-  fill: #a94442 !important;
+  fill: #c09e9d !important;
 }
 
 .danger-background, .danger-text-background {
-  fill: #f2dede !important;
+  fill: #df2b2b !important;
   fill-opacity: 1 !important;
-  stroke: #ebccd1 !important;
+  stroke: #50131d !important;
   stroke-width: 1px !important;
+  pointer-events: none;
 }
 
 /* Last motion entity */
@@ -73,71 +39,12 @@ svg, svg * {
   stroke-opacity: 1 !important;
 }
 
-/* Alarm Panel */
-
-.alarm-disarmed {
-  fill: #3c763d !important;
-}
-
-.alarm-armed {
-  fill: #8a6d3b !important;
-}
-
-/* Camera */
-
-.camera-idle {
-/*  fill: #B9CEF7 !important; */
-  fill: #6FAECE !important;
-}
-
 /* Light */
 
 .light-off {
-  fill: #C3B7F4 !important;
+  fill: #c9caccff !important;
 }
 
 .light-on {
   fill: #F8D2B9 !important;
-}
-
-/* Doorbell */
-
-.doorbell-off {
-  fill: #C3B7F4 !important;
-}
-
-.doorbell-on {
-  fill: #F8D2B9 !important;
-}
-
-/* Temperature sensor */
-
-.temp-very-low-background {
-  fill: #d9edf7 !important;
-  fill-opacity: 1 !important;
-}
-
-.temp-below-average-background {
-  fill: #dcefe8 !important;
-  fill-opacity: 1 !important;
-}
-
-.temp-average-background {
-  fill: #dff0d8 !important;
-  fill-opacity: 1 !important;
-}
-
-.temp-very-high-background {
-  fill: #f2dede !important;
-  fill-opacity: 1 !important;
-}
-
-/* Media player */
-
-.squeezebox-off {
-  fill: #8AA8A7 !important;
-}
-
-.squeezebox-on {
-  fill: #2baaa6 !important;
 }
