--- a/www/custom_ui/floorplan/floorplan.css
+++ b/www/custom_ui/floorplan/floorplan.css
@@ -2,6 +2,7 @@
 
 svg, svg * {
   pointer-events: all;
+    background-color: var(--primary-background-color);
 }
 
 /* Hover over */
@@ -54,5 +55,5 @@ svg, svg * {
 }
 
 .light-on {
-  fill: #F8D2B9 !important;
+  fill: rgb(239, 248, 185) !important;
 }
